feat: 0913 서버 작업

--- a/html/index.html
+++ b/html/index.html
@@ -1,3 +1,47 @@
 <?php include_once("./layout/header.html"); ?>
-    <main></main>
+
+
+<main>
+    <div id="container">
+        <div id="mainBannerBox">
+            <ul class="mainBanner">
+                <li><a href="#"><img src="" alt=""><div></div></a></li>
+            </ul>
+        </div>
+        <div id="movieRankBox">
+            <div class="movieRank">
+                <ul class="rankTitle">
+                    <li><button>현재상영작</button></li>
+                    <li><button>최신개봉작</button></li>
+                    <li><button>상영예정작</button></li>
+                    <li><button>예매율순</button></li>
+                </ul>
+                <ul class="rankContents">
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                    <li><a href="#"><img src="" alt=""><span></span></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</main>
+
+
 <?php include_once("./layout/footer.html"); ?>
