--- a/html/index.html
+++ b/html/index.html
@@ -2,20 +2,49 @@
 
 
 <main>
-    <div id="container">
-        <div id="mainBannerBox">
-            <ul class="mainBanner">
-                <li><a href="#"><img src="" alt=""><div></div></a></li>
-            </ul>
+    <section id="mainBannerBox">
+        <div id="mainBanner" class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide mainBannerImg01"><a href="#"><img src="/img/banner/mainB/theLivesOfOthers-mB01.jpg" alt=""></a></div>
+                <div class="swiper-slide mainBannerImg02"><a href="#"><img src="/img/banner/mainB/theLivesOfOthers-mB01.jpg" alt=""></a></div>
+                <div class="swiper-slide mainBannerImg03"><a href="#"><img src="/img/banner/mainB/theLivesOfOthers-mB01.jpg" alt=""></a></div>
+            </div>
         </div>
-        <div id="movieRankBox">
-            <div class="movieRank">
-                <ul class="rankTitle">
-                    <li><button>현재상영작</button></li>
-                    <li><button>최신개봉작</button></li>
-                    <li><button>상영예정작</button></li>
-                    <li><button>예매율순</button></li>
-                </ul>
+    </section>
+    <section id="movieRankBox">
+        <div class="movieRank01">
+            <ul class="rankTitle01">
+                <li><h2 class="nowMovieRankTitle">현재상영작</h2></li>
+                <li><h2 class="recentMovieRankTitle">최신개봉작</h2></li>
+            </ul>
+            
+            <div id="nowMovieRankContents">
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><a href="#"><img src="/img/poster/alienRomulus-p01.jpeg" alt=""><span></span></a></div>
+                        <div class="swiper-slide"><a href="#"><img src="/img/poster/alienRomulus-p01.jpeg" alt=""><span></span></a></div>
+                        <div class="swiper-slide"><a href="#"><img src="/img/poster/alienRomulus-p01.jpeg" alt=""><span></span></a></div>
+                        <div class="swiper-slide"><a href="#"><img src="/img/poster/alienRomulus-p01.jpeg" alt=""><span></span></a></div>
+                        <div class="swiper-slide"><a href="#"><img src="/img/poster/alienRomulus-p01.jpeg" alt=""><span></span></a></div>
+                        <div class="swiper-slide"><a href="#"><img src="/img/poster/alienRomulus-p01.jpeg" alt=""><span></span></a></div>
+                        <div class="swiper-slide"><a href="#"><img src="/img/poster/alienRomulus-p01.jpeg" alt=""><span></span></a></div>
+                        <div class="swiper-slide"><a href="#"><img src="/img/poster/alienRomulus-p01.jpeg" alt=""><span></span></a></div>
+                        <div class="swiper-slide"><a href="#"><img src="/img/poster/alienRomulus-p01.jpeg" alt=""><span></span></a></div>
+                        <div class="swiper-slide"><a href="#"><img src="/img/poster/alienRomulus-p01.jpeg" alt=""><span></span></a></div>
+                    </div>
+                    <!-- Add Pagination -->
+                    <div class="swiper-pagination"></div>
+                    <!-- Add Arrows -->
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                </div>
+            </div>
+        </div>
+        <div class="movieRank02">
+            <ul class="rankTitle02">
+                <li><h2>상영예정작</h2></li>
+                <li><h2>예매율순</h2></li>
+            </ul>
                 <ul class="rankContents">
                     <li><a href="#"><img src="" alt=""><span></span></a></li>
                     <li><a href="#"><img src="" alt=""><span></span></a></li>
@@ -38,9 +67,17 @@
                     <li><a href="#"><img src="" alt=""><span></span></a></li>
                     <li><a href="#"><img src="" alt=""><span></span></a></li>
                 </ul>
+        </div>
+    </section>
+    <section id="middleBannerBox">
+        <div id="middleBanner" class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide middleBannerImg01"><a href="#"><img src="/img/banner/mainB/theLivesOfOthers-mB01.jpg" alt=""></a></div>
+                <div class="swiper-slide middleBannerImg02"><a href="#"><img src="/img/banner/mainB/theLivesOfOthers-mB01.jpg" alt=""></a></div>
+                <div class="swiper-slide middleBannerImg03"><a href="#"><img src="/img/banner/mainB/theLivesOfOthers-mB01.jpg" alt=""></a></div>
             </div>
         </div>
-    </div>
+    </section>
 </main>
 
 
