--- a/html/index.html
+++ b/html/index.html
@@ -78,6 +78,57 @@
             </div>
         </div>
     </section>
+    <section id="eventPreviewBox">
+        <article id="eventBox">
+            <h2>이벤트</h2>
+            <div class="eventContentBox">
+                <ul class="eventImgList">
+                    <li><a href="#"><img src="" alt=""></a></li>
+                    <li><a href="#"><img src="" alt=""></a></li>
+                    <li><a href="#"><img src="" alt=""></a></li>
+                    <li><a href="#"><img src="" alt=""></a></li>
+                    <li><a href="#"><img src="" alt=""></a></li>
+                </ul>
+            </div>
+        </article>
+        <article id="previewBox">
+            <h2>시사회</h2>
+            <div id="previewList">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </article>
+    </section>
+    <section id="bottomBannerBox">
+        <div id="bottomBanner" class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide middleBannerImg01"><a href="#"><img src="/img/banner/mainB/theLivesOfOthers-mB01.jpg" alt=""></a></div>
+                <div class="swiper-slide middleBannerImg02"><a href="#"><img src="/img/banner/mainB/theLivesOfOthers-mB01.jpg" alt=""></a></div>
+                <div class="swiper-slide middleBannerImg03"><a href="#"><img src="/img/banner/mainB/theLivesOfOthers-mB01.jpg" alt=""></a></div>
+            </div>
+        </div>
+    </section>
+    <section id="noticeReviewBox">
+        <article id="noticeBox">
+            <h2>공지사항</h2>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </article>
+        <article id="reviewBox">
+            <h2>관람평</h2>
+            <div id="reviewList">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </article>
+    </section>
 </main>
 
 
