date: 0927백업 - 메인페이지 코드 정리 전 백업

--- a/html/index.html
+++ b/html/index.html
@@ -21,13 +21,13 @@
                     </a>
                 </div>
             </div>
-            <!-- <div class="d-none d-lg-flex swiper-button nextBtn">
+            <div class="d-none d-lg-flex swiper-button nextBtn">
                 <img src="/img/icon/arrowIcon.svg" alt="우측 화살표 이미지">
             </div>
             <div class="d-none d-lg-flex swiper-button prevBtn">
                 <img src="/img/icon/arrowIcon.svg" alt="좌측 화살표 이미지">
             </div>
-            <div class="d-none d-lg-flex swiper-pagination"></div> -->
+            <div class="d-none d-lg-flex swiper-pagination"></div>
         </div>
     </section>
     <section id="movieRankBox">
