feat: 0928 카카오 로그인 API 적용 중

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <?php include_once("./layout/header.html"); ?>
 
 
-<main id="mainMain">
+<main id="mainMain" class="d-flex flex-column">
     <section id="mainBannerBox">
         <div id="mainBanner" class="swiper mySwiper">
             <div class="swiper-wrapper">
