--- a/html/sub/login2.html
+++ b/html/sub/login2.html
@@ -14,13 +14,15 @@
 <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js" integrity="sha384-TiCUE00h649CAMonG018J2ujOgDKW/kVWlChEuu4jK2vxfAAD0eZxzCKakxg55G4" crossorigin="anonymous"></script>
 
 <script>
-  Kakao.init('자바스크립트키'); // 사용하려는 앱의 JavaScript 키 입력
+  Kakao.init('cb34b5727280769c98e279647531734a'); // 사용하려는 앱의 JavaScript 키 입력
 </script>
 
 <script>
     function loginWithKakao() {
         Kakao.Auth.authorize({
-        redirectUri: 'http://sodamcine.dothome.co.kr/oauth',}); // 사용하려는 앱의 Redirect URI 입력
+            scope: 'profile_nickname, profile_image, friends, talk_message',
+            redirectUri: 'http://sodamcine.dothome.co.kr/oauth',
+        }); // 사용하려는 앱의 Redirect URI 입력
     }
 
     // 아래는 데모를 위한 UI 코드입니다.
