--- a/html/sub/login2.html
+++ b/html/sub/login2.html
@@ -6,7 +6,7 @@
     <a id="kakao-login-btn" href="javascript:loginWithKakao()">
         <img src="https://k.kakaocdn.net/14/dn/btroDszwNrM/I6efHub1SN5KCJqLm1Ovx1/o.jpg" width="222" alt="카카오 로그인 버튼" />
     </a>
-    <p id="token-result"></p>    
+    <p id="token-result"></p>
 
 </main>
 
@@ -15,6 +15,7 @@
 
 <script>
   Kakao.init('cb34b5727280769c98e279647531734a'); // 사용하려는 앱의 JavaScript 키 입력
+  console.log( Kakao.isInitialized() ); // 초기화 판단여부
 </script>
 
 <script>
