--- a/html/sub/login2.html
+++ b/html/sub/login2.html
@@ -1,29 +1,24 @@
 <?php include_once("../layout/header.html"); ?>
-
+<!-- // JavaScript Full SDK 2.7.2(2024.5.22) 최신버전 업데이트 확인 필요함 -->
+<script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js" integrity="sha384-TiCUE00h649CAMonG018J2ujOgDKW/kVWlChEuu4jK2vxfAAD0eZxzCKakxg55G4" crossorigin="anonymous"></script>
 
 <main>
-
     <a id="kakao-login-btn" href="javascript:loginWithKakao()">
         <img src="https://k.kakaocdn.net/14/dn/btroDszwNrM/I6efHub1SN5KCJqLm1Ovx1/o.jpg" width="222" alt="카카오 로그인 버튼" />
     </a>
     <p id="token-result"></p>
-
 </main>
 
-<!-- 카카오로그인 JavaScript SDK -->
-<script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js" integrity="sha384-TiCUE00h649CAMonG018J2ujOgDKW/kVWlChEuu4jK2vxfAAD0eZxzCKakxg55G4" crossorigin="anonymous"></script>
-
 <script>
-  Kakao.init('cb34b5727280769c98e279647531734a'); // 사용하려는 앱의 JavaScript 키 입력
-  console.log( Kakao.isInitialized() ); // 초기화 판단여부
-</script>
+    // JavaScript 초기화 함수 및 초기화 확인
+    Kakao.init('cb34b5727280769c98e279647531734a'); // [내 애플리케이션] > [앱 키]에서 확인한 JavaScript Key 할당
+    Kakao.isInitialized(); // true 값이 나와야 함
 
-<script>
+    // 간편로그인 요청 함수
     function loginWithKakao() {
         Kakao.Auth.authorize({
-            scope: 'profile_nickname, profile_image, friends, talk_message',
-            redirectUri: 'http://sodamcine.dothome.co.kr/oauth',
-        }); // 사용하려는 앱의 Redirect URI 입력
+            redirectUri: 'http://sodamcine.dothome.co.kr/login2.html'
+        });
     }
 
     // 아래는 데모를 위한 UI 코드입니다.
@@ -32,16 +27,16 @@
         var token = getCookie('authorize-access-token');
 
         if(token) {
-            Kakao.Auth.setAccessToken(token);
-            Kakao.Auth.getStatusInfo()
+        Kakao.Auth.setAccessToken(token);
+        Kakao.Auth.getStatusInfo()
             .then(function(res) {
-                if (res.status === 'connected') {
-                    document.getElementById('token-result').innerText
-                    = 'login success, token: ' + Kakao.Auth.getAccessToken();
-                }
+            if (res.status === 'connected') {
+                document.getElementById('token-result').innerText
+                = 'login success, token: ' + Kakao.Auth.getAccessToken();
+            }
             })
             .catch(function(err) {
-                Kakao.Auth.setAccessToken(null);
+            Kakao.Auth.setAccessToken(null);
             });
         }
     }
