--- a/html/sub/login.html
+++ b/html/sub/login.html
@@ -90,8 +90,9 @@
                                 <span>Naver 계정으로 로그인</span>
                             </button>
                             <button type="button">
-                                <span><img src="" alt=""></span>
-                                <span>Kakao 계정으로 로그인</span>
+                                <a id="kakao-login-btn" href="javascript:loginWithKakao()">
+                                    <img src="https://k.kakaocdn.net/14/dn/btroDszwNrM/I6efHub1SN5KCJqLm1Ovx1/o.jpg" width="222" alt="카카오 로그인 버튼" />
+                                </a>
                             </button>
                         </div>
                     </fieldset>
