feat: 서브페이지 레이아웃 작업 중

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <?php include_once("./layout/header.html"); ?>
 
 
-<main id="mainMain" class="d-flex flex-column gap-5">
+<main id="mainMain" class="d-flex flex-column">
     <!-- 섹션1. 메인배너 -->
     <section id="mainBannerBox" class="mx-auto">
         <div id="mainBanner" class="swiper mySwiper">
@@ -2778,7 +2778,7 @@
         </div>
     </section>
     <!-- 섹션3. 관람평 -->
-    <section id="reviewBox" class="mx-auto">
+    <section id="reviewBox" class="d-none mx-auto">
         <div class="titleBox d-flex justify-content-between">
             <span class="contentTitle01 d-flex flex-column gap-2">
                 <h2>REVIEW</h2>
@@ -3283,7 +3283,7 @@
                         </a>
                     </li>
                 </ul> -->
-                <p>단체관람 및 상영관 대관이 필요하시다면<br class="d-none">
+                <p>단체관람 및 상영관 대관이 필요하시다면<br class="dN1770">
                     고객센터로 전화주시거나 이메일을 남겨주세요.<br>
                     24시간 안에 답변드리겠습니다.<br class="d-none">
                     (주말 및 공휴일 제외)</p>
