feat: 레이아웃 추가

--- a/html/sub/booking.html
+++ b/html/sub/booking.html
@@ -7,8 +7,13 @@
             <h2>지역 선택하기</h2>
             <ul id="region-list">
                 <li onclick="showTheaters('서울', this)" class="selected">서울</li>
-                <li onclick="showTheaters('부산', this)">부산</li>
-                <li onclick="showTheaters('인천', this)">인천</li>
+                <li onclick="showTheaters('경기/인천', this)">경기/인천</li>
+                <li onclick="showTheaters('충청/대전', this)">충청/대전</li>
+                <li onclick="showTheaters('전라/광주', this)">전라/광주</li>
+                <li onclick="showTheaters('경북/대구', this)">경북/대구</li>
+                <li onclick="showTheaters('경남/울산/부산', this)">경남/울산/부산</li>
+                <li onclick="showTheaters('강원', this)">강원</li>
+                <li onclick="showTheaters('제주', this)">제주</li>
             </ul>
         </div>
     
