--- a/html/sub/branchInfo_GD.html
+++ b/html/sub/branchInfo_GD.html
@@ -5,30 +5,24 @@
     <h1>경북/대구 지점 안내</h1>
 
     <div class="tabs">
-        <div class="tab active" data-target="#tab1">지점 1</div>
-        <div class="tab" data-target="#tab2">지점 2</div>
-        <div class="tab" data-target="#tab3">지점 3</div>
-        <div class="tab" data-target="#tab4">지점 4</div>
-        <div class="tab" data-target="#tab5">지점 5</div>
-        <div class="tab" data-target="#tab6">지점 6</div>
-        <div class="tab" data-target="#tab7">지점 7</div>
-        <div class="tab" data-target="#tab8">지점 8</div>
-        <div class="tab" data-target="#tab9">지점 9</div>
-        <div class="tab" data-target="#tab10">지점 10</div>
+        <div class="tab active" data-target="#tab1">경주</div>
+        <div class="tab" data-target="#tab2">구미</div>
+        <div class="tab" data-target="#tab3">대구</div>
+        <div class="tab" data-target="#tab4">포항</div>
     </div>
 
     <div id="tab1" class="tab-content active">
         <div class="container">
             <div class="branch-slider swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="https://via.placeholder.com/800x400?text=Branch+1" alt="지점 1"></div>
+                    <div class="swiper-slide"><img src="https://i.ytimg.com/vi/jTlMg5noFFQ/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBJXw4Rgk38HFMZoMLCv5FzKMLs2Q" alt="지점 1"></div>
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
             </div>
             <div class="branch-info">
-                <h2>지점명: 서울 강남</h2>
+                <h2>지점명: 경주</h2>
                 <p>위치: 서울특별시 강남구</p>
                 <p>연락처: 02-1234-5678</p>
                 <p>편의시설: 무료 Wi-Fi, 주차 공간 있음</p>
@@ -40,14 +34,14 @@
         <div class="container">
             <div class="branch-slider swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="https://via.placeholder.com/800x400?text=Branch+2" alt="지점 2"></div>
+                    <div class="swiper-slide"><img src="https://www.taeancinema.com/images/default/content/romm.jpg" alt="지점 2"></div>
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
             </div>
             <div class="branch-info">
-                <h2>지점명: 부산 해운대</h2>
+                <h2>지점명: 구미</h2>
                 <p>위치: 부산광역시 해운대구</p>
                 <p>연락처: 051-123-4567</p>
                 <p>편의시설: 무료 Wi-Fi, 주차 공간 있음</p>
@@ -59,14 +53,14 @@
         <div class="container">
             <div class="branch-slider swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="https://via.placeholder.com/800x400?text=Branch+3" alt="지점 3"></div>
+                    <div class="swiper-slide"><img src="https://i.ytimg.com/vi/jTlMg5noFFQ/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBJXw4Rgk38HFMZoMLCv5FzKMLs2Q" alt="지점 3"></div>
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
             </div>
             <div class="branch-info">
-                <h2>지점명: 대전 유성</h2>
+                <h2>지점명: 대구</h2>
                 <p>위치: 대전광역시 유성구</p>
                 <p>연락처: 042-123-7890</p>
                 <p>편의시설: 무료 Wi-Fi, 주차 공간 있음</p>
@@ -74,10 +68,25 @@
         </div>
     </div>
 
-    <!-- 추가 탭 내용 추가 -->
-
-    <div class="map" id="map"></div> <!-- 지도 삽입 -->
-
+    <div id="tab4" class="tab-content">
+        <div class="container">
+            <div class="branch-slider swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="https://i.ytimg.com/vi/jTlMg5noFFQ/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBJXw4Rgk38HFMZoMLCv5FzKMLs2Q" alt="지점 3"></div>
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+            </div>
+            <div class="branch-info">
+                <h2>지점명: 포항</h2>
+                <p>위치: 대전광역시 유성구</p>
+                <p>연락처: 042-123-7890</p>
+                <p>편의시설: 무료 Wi-Fi, 주차 공간 있음</p>
+            </div>
+        </div>
+    </div>
+    <div id="map" style="width:100%;height:350px;"></div>
 </main>
 
 <?php include_once("../layout/footer.html"); ?>
