--- a/html/sub/branchInfo_J.html
+++ b/html/sub/branchInfo_J.html
@@ -2,12 +2,11 @@
 
 
 <main id="branchInfo">
-    <h1>전라/광주 지점 안내</h1>
+    <h1>제주 지점 안내</h1>
 
     <div class="tabs">
-        <div class="tab active" data-target="#tab1">광주</div>
-        <div class="tab" data-target="#tab2">군산</div>
-        <div class="tab" data-target="#tab3">전주</div>
+        <div class="tab active" data-target="#tab1">서귀포시</div>
+        <div class="tab" data-target="#tab2">제주시</div>
     </div>
 
     <div id="tab1" class="tab-content active">
@@ -21,7 +20,7 @@
                 <div class="swiper-button-prev"></div>
             </div>
             <div class="branch-info">
-                <h2>지점명: 광주</h2>
+                <h2>지점명: 서귀포시</h2>
                 <p>위치: 서울특별시 강남구</p>
                 <p>연락처: 02-1234-5678</p>
                 <p>편의시설: 무료 Wi-Fi, 주차 공간 있음</p>
@@ -40,28 +39,9 @@
                 <div class="swiper-button-prev"></div>
             </div>
             <div class="branch-info">
-                <h2>지점명: 군산</h2>
+                <h2>지점명: 제주시</h2>
                 <p>위치: 부산광역시 해운대구</p>
                 <p>연락처: 051-123-4567</p>
-                <p>편의시설: 무료 Wi-Fi, 주차 공간 있음</p>
-            </div>
-        </div>
-    </div>
-
-    <div id="tab3" class="tab-content">
-        <div class="container">
-            <div class="branch-slider swiper-container">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="https://i.ytimg.com/vi/jTlMg5noFFQ/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBJXw4Rgk38HFMZoMLCv5FzKMLs2Q" alt="지점 3"></div>
-                </div>
-                <div class="swiper-pagination"></div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-            </div>
-            <div class="branch-info">
-                <h2>지점명: 전주</h2>
-                <p>위치: 대전광역시 유성구</p>
-                <p>연락처: 042-123-7890</p>
                 <p>편의시설: 무료 Wi-Fi, 주차 공간 있음</p>
             </div>
         </div>
