--- a/html/sub/branchInfo.html
+++ b/html/sub/branchInfo.html
@@ -2,34 +2,32 @@
 
 
 <main id="branchInfo">
-    <h1>지점 안내</h1>
+    <h1>영화관</h1>
 
     <div class="tabs">
-        <div class="tab active" data-target="#tab1">지점 1</div>
-        <div class="tab" data-target="#tab2">지점 2</div>
-        <div class="tab" data-target="#tab3">지점 3</div>
-        <div class="tab" data-target="#tab4">지점 4</div>
-        <div class="tab" data-target="#tab5">지점 5</div>
-        <div class="tab" data-target="#tab6">지점 6</div>
-        <div class="tab" data-target="#tab7">지점 7</div>
-        <div class="tab" data-target="#tab8">지점 8</div>
-        <div class="tab" data-target="#tab9">지점 9</div>
-        <div class="tab" data-target="#tab10">지점 10</div>
+        <div class="tab active" data-target="#tab1">서울</div>
+        <div class="tab" data-target="#tab2">경기/인천</div>
+        <div class="tab" data-target="#tab3">충청/대전</div>
+        <div class="tab" data-target="#tab4">전라/광주</div>
+        <div class="tab" data-target="#tab5">경북/대구</div>
+        <div class="tab" data-target="#tab6">경남/울산/부산</div>
+        <div class="tab" data-target="#tab7">강원</div>
+        <div class="tab" data-target="#tab8">제주</div>
     </div>
 
     <div id="tab1" class="tab-content active">
         <div class="container">
             <div class="branch-slider swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="https://via.placeholder.com/800x400?text=Branch+1" alt="지점 1"></div>
+                    <div class="swiper-slide"><img src="https://www.taeancinema.com/images/default/content/romm.jpg" alt="지점 1"></div>
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
             </div>
             <div class="branch-info">
-                <h2>지점명: 서울 강남</h2>
-                <p>위치: 서울특별시 강남구</p>
+                <h2>지역: 서울</h2>
+                <p>지점: 서울특별시 강남구</p>
                 <p>연락처: 02-1234-5678</p>
                 <p>편의시설: 무료 Wi-Fi, 주차 공간 있음</p>
             </div>
@@ -40,7 +38,7 @@
         <div class="container">
             <div class="branch-slider swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="https://via.placeholder.com/800x400?text=Branch+2" alt="지점 2"></div>
+                    <div class="swiper-slide"><img src="https://i.ytimg.com/vi/jTlMg5noFFQ/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBJXw4Rgk38HFMZoMLCv5FzKMLs2Q" alt="지점 2"></div>
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-next"></div>
@@ -59,7 +57,7 @@
         <div class="container">
             <div class="branch-slider swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="https://via.placeholder.com/800x400?text=Branch+3" alt="지점 3"></div>
+                    <div class="swiper-slide"><img src="https://www.taeancinema.com/images/default/content/romm.jpg" alt="지점 3"></div>
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-next"></div>
@@ -76,7 +74,7 @@
 
     <!-- 추가 탭 내용 추가 -->
 
-    <div class="map" id="map"></div> <!-- 지도 삽입 -->
+    <div id="map" style="width:100%;height:350px;"></div>
 
 </main>
 
